--- a/src/main/resources/templates/admin/customer_orders/orders_list.html
+++ b/src/main/resources/templates/admin/customer_orders/orders_list.html
@@ -78,7 +78,7 @@
 					</div>
 					
 				    <div class="search-container">
-	      				<input type="text" name="word" id="word" class="searchKeyword search-input" placeholder="검색할 주문번호 입력" />
+	      				<input type="number" name="word" id="word" class="searchKeyword search-input" placeholder="검색할 주문번호 입력" />
 	      				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
 	    			</div>
 				</div>
