--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -19,7 +19,7 @@ table.dataTable.is-striped>tbody>tr:nth-child(2n)>*, .pagination-link,
 	font-weight: 700;
 }
 
-.default-btn.cancle {
+.default-btn.cancel {
 	background-color: #fff;
 	border: 2px solid #c0c0c0;
 	color: #666666;
@@ -175,11 +175,11 @@ input[type=checkbox]:checked+label {
 	color: #000;
 }
 
-/* .status-btn.off {
+.status-btn.off {
   background-color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #E54F53;
-} */
+}
 
 /* 라디오 */
 
@@ -266,7 +266,6 @@ input[type=text], input[type="number"], select {
 	top: 50%;
 	right: 10px;
 	transform: translateY(-50%);
-	position: absolute;
 }
 
 /*
