--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -82,7 +82,7 @@
       </div>
       <ul class="sub-menu-list">
         <li class="sub-menu-item" data-sub-menu-id="submenu3">
-          <a href="">상품목록조회</a>
+          <a href="/admin/index?path=admin/products/products">상품목록조회</a>
         </li>
       </ul>
     </li>
