--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -103,7 +103,7 @@
       </div>
       <ul class="sub-menu-list">
         <li>
-          <a href="/admin/index?path=/admin/customer_orders/orders_list">주문내역목록</a>
+          <a href="/admin/customer_orders/list">주문내역목록</a>
         </li>
       </ul>
     </li>
@@ -124,7 +124,7 @@
       </div>
       <ul class="sub-menu-list">
         <li>
-          <a href="">발주내역</a>
+          <a href="/admin/supplier_orders/list">발주내역</a>
         </li>
         <li>
           <a href="">입출고내역</a>
