--- a/src/main/resources/templates/admin/supplier_orders/supplierList.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierList.html
@@ -3,39 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-	<link rel="stylesheet" href="/admin/customer_orders/css/list.css">
 	
 	<!-- Bulma CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
-	<!-- Font Awesome CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- DataTables with Bulma integration -->
-	<link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.bulma.css">
 	<!-- DatePicker -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+	<link rel="stylesheet" href="/admin/supplier_orders/css/list.css">
 </head>
 <body>
+
 	<div class="filter-container white-frame">
 		<div class="header">
-			<h1 class="search-list-title">주문내역조회</h1>
+			<h1 class="search-list-title">발주내역</h1>
 		</div>
 	
 		<div class="filter-container white-frame">
-			<div class="header">
-				<h1 class="search-list-title">주문내역조회</h1>
-			</div>
-			
 			<div class="content">
 				<div class="search-filter">
 					<div class="filter-group">
-						<span class="search-list-subject">날짜검색</span>
-						<div class="select-wrap">
-							<select id="dateColumn" class="select">
-								<option id="select-purchase" value="purchase">구매날짜</option>
-								<option value="reuqest">요청날짜</option>
-							</select>
-							<div class="select-arrow-down"></div>
-						</div>
+						<span class="search-list-subject">발주일</span>
 						<div class="date-picker">
 							<div class="input-date-box">
 								<input type="text" id="startDate" class="placeholder startDate"
@@ -57,28 +43,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="search-bar-radio-group">
-					<div class="search-list-subject">주문상태</div>
-					<div class="select-wrap">
-						<input type="radio" id="order-status-all" name="order_status" value="" checked="checked"/>
-						<label for="order-status-all">전체</label>
-						<input type="radio" id="order-status-change" name="order_status" value="request"/>
-						<label for="order-status-change">변경요청</label>
-						<input type="radio" id="order-status-completion" name="order_status" value="completion"/>
-						<label for="order-status-completion">처리완료</label>
-					</div>
-				</div>
 				<div class="search-bar-group">
 					<div class="search-list-subject">검색어</div>
 					<div class="select-wrap">
 						<select id="searchColumn" class="select">
-							<option value="order_num">주문번호</option>
+							<option value="order_num">발주번호</option>
 						</select>
 						<div class="select-arrow-down"></div>
 					</div>
 					
 				    <div class="search-container">
-	      				<input type="number" name="word" id="word" class="searchKeyword search-input" placeholder="검색할 주문번호 입력" />
+	      				<input type="number" name="word" id="word" class="searchKeyword search-input" placeholder="조회할 주문번호 입력" />
 	      				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
 	    			</div>
 				</div>
@@ -91,36 +66,29 @@
 	
 	<div class="table-container white-frame">
 		<span id="data-count" class="data-count"></span>
-		<button id="request-button" class="default-btn" onclick="delivery_request();" style="float: right;">배송요청</button>
+		<button id="request-button" class="default-btn" onclick="location.href='/admin/supplier_orders/register'" style="float: right;">등록</button>
 		<form id="table-form">
-			<table id="customer-orders-table" class="table is-striped" style="width: 100%">
+			<table id="supplier-orders-table" class="table is-striped" style="width: 100%">
 				<thead>
 					<tr>
-						<th>
-							<input type="checkbox" id="select-all" class="checkbox">
-							<label for="select-all"></label>
-						</th>
 						<th>NO</th>
-						<th>주문번호</th>
-						<th>주문자ID</th>
-						<th>이름</th>
-						<th>총구매금액</th>
-						<th>구매날짜</th>
-						<th>배송상태</th>
-						<th>결제상태</th>
-						<th>주문상태</th>
-						<th>요청날짜</th>
+						<th>발주번호</th>
+						<th>발주상태</th>
+						<th>총 수량</th>
+						<th>총 가격</th>
+						<th>발주날짜</th>
+						<th>발주자</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
 			</table>
 		</form>
 	</div>
-	
+
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="/admin/common/js/main.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-	<script src="/admin/customer_orders/js/list.js"></script>
+	<script src="/admin/supplier_orders/js/list.js"></script>
 	<!-- DataTables JS -->
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 	<!-- DataTables with Bulma integration JS -->
