Fix : html 수정, ReviewsService

--- a/src/main/resources/templates/admin/reviews/reviews.html
+++ b/src/main/resources/templates/admin/reviews/reviews.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Reviews</title>
 
-<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
-<link rel="stylesheet" href="/admin/common/css/modal.css">
-<!-- DataPicker -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-</head>
-<body>
+	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
+	<link rel="stylesheet" href="/admin/common/css/modal.css">
+	<!-- DataPicker -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+<div>
 	<div class="filter-container white-frame">
 		<div class="header">
 			<h1 class="search-list-title">리뷰글 조회</h1>
@@ -105,5 +101,5 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 	<script src="/admin/reviews/js/reviews.js"></script>
-</body>
+</div>
 </html>
