--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -151,7 +151,7 @@
       </div>
       <ul class="sub-menu-list">
         <li>
-          <a href="">배너관리</a>
+          <a href="/admin/index?path=admin/banners/banners">배너관리</a>
         </li>
         <li>
           <a href="">공지글관리</a>
