--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Manager Details</title>
-<link rel="stylesheet" href="/admin/managers/css/managerDetails.css" />
-</head>
-<body>
+	<link rel="stylesheet" href="/admin/managers/css/managerDetails.css" />
+<div>
 	<div class="white-frame">
 		<form action="/admin/managers/join" method="POST">
 			<h1 class="search-list-title">매니저 정보 등록</h1>
@@ -130,5 +126,5 @@
 		    });
 		}
 	</script>
-</body>
+</div>
 </html>
