--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -3,10 +3,22 @@
 
 	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 	<style>
-	textarea:focus {
-		border: 1px solid #C0C0C0; /* 포커스 시에도 기본 보더 유지 */
-		outline: none; /* 포커스 시 아웃라인 제거 */
-	}
+		textarea {
+			width: 100%; 
+			min-height: 230px; 
+			height: auto; 
+			padding: 10px; 
+			border-radius: 5px; 
+			border: 1px solid #c0c0c0; 
+			display: block; 
+			color: #666666; 
+			resize: none;
+		}
+	
+		textarea:focus {
+			border: 1px solid #C0C0C0; /* 포커스 시에도 기본 보더 유지 */
+			outline: none; /* 포커스 시 아웃라인 제거 */
+		}
 	</style>
 
 <div>
@@ -58,23 +70,19 @@
 		<form
 			th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}"
 			th:object="${inquiries}" method="POST">
-			<div class="white-frame"
-				style="margin-top: 30px; min-height: 350px; height: auto">
+			<div class="white-frame" style="margin-top: 30px; min-height: 350px; height: auto">
 				<div class="text-group" style="border-bottom: none;">
-					<span class="search-list-subject">답변내용</span> <input type="hidden"
-						th:field="*{inquiry_num}">
-
-					<!-- textarea 내용 설정 -->
+					<span class="search-list-subject">답변내용</span> 
+					
+					<input type="hidden" th:field="*{inquiry_num}">
+					
 					<textarea th:field="*{answer_content}"
 						th:attr="placeholder=${status == '미완료' ? '내용을 입력하세요' : ''}"
 						th:utext="${status == '처리완료' ? status : ''}"
-						style="width: 100%; min-height: 230px; height: auto; padding: 10px; border-radius: 5px; border: 1px solid #c0c0c0; display: block; color: #666666; resize: none;"
 						maxlength="1000">
             		</textarea>
 				</div>
-				<div
-					style="display: flex; justify-content: center; align-items: center; gap: 20px;">
-					<!-- submit 버튼 텍스트 설정 -->
+				<div class="btn-box">
 					<button type="submit" class="default-btn"
 						th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
 					<button type="button" class="default-btn cancle" onclick="location.href='/admin/index?path=admin/inquiries/inquiries'">취소</button>
