--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -477,3 +477,8 @@ input[type='number'] {
 .modal-footer .button {
 	margin-left: 5px;
 }
+
+.essential::before {
+    content: "*";
+    color: red;
+}
