--- a/src/main/resources/templates/admin/customer_orders/customerList.html
+++ b/src/main/resources/templates/admin/customer_orders/customerList.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+
 	<link rel="stylesheet" href="/admin/customer_orders/css/list.css">
 	
 	<!-- Bulma CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
 	<!-- DatePicker -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-</head>
-<body>
+    
+<div>
 	<div class="filter-container white-frame">
 		<div class="header">
 			<h1 class="search-list-title">주문내역조회</h1>
@@ -42,10 +40,10 @@
 							</div>
 						</div>
 						<div class="date-options date-pick-btn">
-							<button class="date-option today today-btn date-btn" onclick="setDateOption(0, this, event)">오늘</button>
-							<button class="date-option week-btn date-btn" onclick="setDateOption(7, this, event)">1주일</button>
-							<button class="date-option month-btn date-btn" onclick="setDateOption(30, this, event)">1개월</button>
-							<button class="date-option year-btn date-btn" onclick="setDateOption(365, this, event)">1년</button>
+							<button class="date-option today today-btn date-btn" onclick="setDateOption(0, this)">오늘</button>
+							<button class="date-option week-btn date-btn" onclick="setDateOption(7, this)">1주일</button>
+							<button class="date-option month-btn date-btn" onclick="setDateOption(30, this)">1개월</button>
+							<button class="date-option year-btn date-btn" onclick="setDateOption(365, this)">1년</button>
 						</div>
 					</div>
 				</div>
@@ -117,5 +115,5 @@
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 	<!-- DataTables with Bulma integration JS -->
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
-</body>
+</div>
 </html>
