--- a/src/main/resources/templates/admin/reviews/reviewDetails.html
+++ b/src/main/resources/templates/admin/reviews/reviewDetails.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Review Details</title>
 
 <link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 
-</head>
-<body>
+<div>
 	<div class="container">
 		<!-- 뒤로가기 버튼 -->
 	    <button class="back-btn" onclick="location.href='/admin/index?path=admin/reviews/reviews'">
@@ -49,5 +43,5 @@
 		</div>
 	</div>
 	<script src="/admin/reviews/js/reviewDetails.js"></script>
-</body>
+</div>
 </html>
