Fix: 발주 등록 페이지 구매금액 수정

--- a/src/main/resources/templates/admin/supplier_orders/supplierRegister.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierRegister.html
@@ -73,7 +73,7 @@
 		<form id="order-register-list-form">
 			<div class="list-info-area">
 				<div>
-					<span class="list-count">총 5건</span>
+					<span id="list-count" class="list-count">총 5건</span>
 				</div>	
 				<div>
 					<span><button id="delete-button">삭제</button></span>
