--- a/src/main/resources/templates/admin/login/login.html
+++ b/src/main/resources/templates/admin/login/login.html
@@ -15,16 +15,15 @@
 		    <img src="/admin/common/img/admin-로고.svg" alt="로고" />
 			</div>
 			
-		    <form th:action="@{/loginProc}" method="POST">		    	
-		    
-		        <input id="id" class="id" type="text" th:name="username" placeholder="id"/>
-		        <br>
-		        
-		        <input id="password" class="password" type="password" th:name="password" placeholder="password"/>
-		        <br>
-		        
-		        <button type="submit" class="default-btn">로그인</button>
-		    </form>
+		     <form th:action="@{/loginProc}" method="POST">
+		     	<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"> <!-- CSRF 토큰 추가 -->
+		     	
+                <input id="id" class="id" type="text" th:name="username" placeholder="id" required />
+                <br>
+                <input id="password" class="password" type="password" th:name="password" placeholder="password" required />
+                <br>
+                <button type="submit" class="default-btn">로그인</button>
+            </form>
 		</div>
 	</div>
 </body>
