--- a/src/main/resources/static/admin/managers/css/managerDetails.css
+++ b/src/main/resources/static/admin/managers/css/managerDetails.css
@@ -1,5 +1,6 @@
 /* 공통 스타일 */
 input, select {
+	width:270px;
     margin-left: 50px;
 }
 
@@ -70,8 +71,28 @@ select#deptName{
 	margin-left:50px;
 }
 
-.important {
-    color: red;
-    position: relative;
-    top: -5px;
+.important::after {
+   content: "*";
+    color: red; 
+    font-weight: bold;
+    margin-left: 2px;
+    position: absolute; /* 별표의 절대 위치 지정 */
+    transform: translateY(-45%); /* 별표를 더 위쪽으로 이동 */
+}
+
+#userPart1, #userPart2 {
+	width: 80px;
+}
+
+
+.dept-select {
+	width: 110px;
+}
+
+.overlap{
+	margin-left: 10px;
+}
+
+.value {
+	width: 30px;
 }
