--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -55,7 +55,7 @@ input#toggle-btn[type=checkbox] {
 }
 
 input#toggle-btn[type=checkbox]+label {
-	display: inline-block;
+	display: inlne-block;
 	position: relative;
 	width: 35px;
 	height: 20px;
@@ -175,11 +175,11 @@ input[type=checkbox]:checked+label {
 	color: #000;
 }
 
-/* .status-btn.off {
+.status-btn.off {
   background-color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #E54F53;
-} */
+}
 
 /* 라디오 */
 
