--- a/src/main/resources/templates/admin/banners/bannerInsert.html
+++ b/src/main/resources/templates/admin/banners/bannerInsert.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>배너 등록</title>
+<title>Banner/Popup Insert Page</title>
 
 <link rel="stylesheet" href="/admin/banners/css/banners.css" />
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
@@ -13,7 +14,7 @@
 
 	<div class="form-container white-frame">
 		<div class="header">
-			<h1 class="search-list-title">배너 등록</h1>
+			<h1 class="search-list-title">배너/팝업 등록</h1>
 		</div>
 		<form action="/admin/banners/insert" method="post" enctype="multipart/form-data" class="content">
 			<!-- 배너 정보 입력 폼 -->
@@ -21,7 +22,7 @@
 				<div class="search-list-subject insert-subject">
 					제목 <label class="required">*</label>
 				</div>
-				<input type="text" class="insert-input" required>
+				<input type="text" name="banner_title"class="insert-input">
 			</div>
 
 			<div class="radio-group">
@@ -29,8 +30,8 @@
 					유형 <label class="required">*</label>
 				</div>
 				<div class="radio-wrap">
-					<input type="radio" name="banner-position" value="01" id="position-banner" class="radio"> <label for="position-banner">배너</label> 
-					<input type="radio" name="banner-position" value="02" id="position-popup" class="radio"> <label for="position-popup">팝업</label>
+					<input type="radio" name="banner_position" value="01" id="position-banner" class="radio"> <label for="position-banner">배너</label> 
+					<input type="radio" name="banner_position" value="02" id="position-popup" class="radio"> <label for="position-popup">팝업</label>
 				</div>
 			</div>
 
@@ -39,8 +40,8 @@
 					노출 여부 <label class="required">*</label>
 				</div>
 				<div class="radio-wrap">
-					<input type="radio" name="banner-visible" value="01" id="visible" class="radio"> <label for="visible">노출</label> 
-					<input type="radio" name="banner-visible" value="02" id="hidden" class="radio"> <label for="hidden">비노출</label>
+					<input type="radio" name="banner_visible" value="01" id="visible" class="radio"> <label for="visible">노출</label> 
+					<input type="radio" name="banner_visible" value="02" id="hidden" class="radio"> <label for="hidden">비노출</label>
 				</div>
 			</div>
 
@@ -50,14 +51,16 @@
 				</div>
 				<div class="date-picker">
 						<div class="input-date-box">
-							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" required/> <i class="fa-solid fa-calendar-days"></i>
+							<input type="text" name="banner_start" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+							<i class="fa-solid fa-calendar-days"></i>
 						</div>
 						<div class="calendar-slash">-</div>
 						<div class="input-date-box">
-							<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" required/> <i class="fa-solid fa-calendar-days"></i>
+							<input type="text" name="banner_end" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+							<i class="fa-solid fa-calendar-days"></i>
 						</div>
 				</div>
-			</div>
+			</div>	
 					
 			<div class="filter-group image-wrap">
 				<div class="search-list-subject insert-subject">
@@ -70,17 +73,25 @@
 			</div>
 			
 			<div class="submit-btns">
-				<button type="submit" class="default-btn">등록</button>
+				<button type="submit" id="insert-button" class="default-btn">등록</button>
 				<button type="button" class="default-btn cancle" onclick="location.href='/admin/index?path=admin/banners/banners'">취소</button>
 			</div>
 		</form>
-
 	</div>
-	
-				
+
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+			<p>등록하시겠습니까?</p>
+			<div class="modal-footer">
+				<button id="confirm-insert" class="modal-btn confirm">확인</button>
+				<button id="cancel-insert" class="modal-btn cancel">취소</button>
+			</div>
+		</div>
+	</div>
+
+	<script src="/admin/common/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="/admin/common/js/main.js"></script>
 	<script src="/admin/banners/js/banners.js"></script>
 
 </body>
