--- a/src/main/resources/templates/admin/products/products.html
+++ b/src/main/resources/templates/admin/products/products.html
@@ -73,7 +73,7 @@
         <h3 class="table-data-cnt-txt">총10건</h3>
         <div class="button-wrap">
             <button id="delete-button">삭제</button>
-            <button class="default-btn" onclick="location.href='/admin/index?path=admin/products/addProduct'">등록</button>
+            <button class="default-btn" onclick="location.href='/admin/products/addProduct'">등록</button>
         </div>
     </div>
     <table id="product" class="table table-center" style="width: 100%">
@@ -101,7 +101,7 @@
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-
+<script src="/admin/common/js/main.js"></script>
 <!-- datatalbes -->
 <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 <script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
