--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -2,7 +2,7 @@
     margin-bottom: 20px;
 }
 
-.product-info, .book-price, .book-qty, .filter-wrap, .radio-filter {
+.book-search, .product-info, .book-price, .book-qty, .filter-wrap, .radio-filter {
     display: flex;
     align-items: center;
 }
@@ -12,6 +12,9 @@
 }
 
 .book-search {
+    position: relative;
+    height: 60px;
+    padding-left: 20px;
     margin-bottom: 30px;
 }
 
@@ -85,4 +88,70 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     justify-content: center;
     gap: 10px;
     margin-top: 20px;
+}
+
+/* 책 재고 정보 모달 */
+#search-book-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
+}
+#search-book-modal.on {
+    display: block;
+}
+
+#search-book-modal .modal-content {
+    position: absolute;
+    top: 25px;
+    right: 26px;
+    width: 972px;
+    padding: 20px 25px;
+    border: 1px solid #666;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+/* 스크롤방지 */
+.stop-scroll{
+    height: 100%;
+    overflow: hidden;
+}
+
+#search-book-modal #close-btn {
+    margin-bottom: 20px;
+    text-align: center;
+    float: right;
+}
+
+#search-book-modal #close-btn i {
+    font-size: 24px;
+    color: #666666;
+}
+
+#search-book-modal #close-btn i:hover {
+    transform: rotate(115deg);
+}
+
+#search-book-modal .table-center td, .table-center th {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#search-book-modal .table thead {
+    height: 50px;
+    background-color: #FAFAFA;
+}
+
+#search-book-modal .table thead th {
+    color: #7E7E7E;
+}
+
+#search-book-modal .table td, .table thead th {
+    border-width: 1px 0 1px 0;
+    border-style: solid;
+    border-color: #D8D8D8;
 }
