--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -10,15 +10,12 @@
  
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.bulma.css"> -->
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- css 연결 -->
 	<link rel="stylesheet" href="/admin/common/css/reset.css">
 	<link rel="stylesheet" href="/admin/common/css/style.css">
 	<link rel="stylesheet" href="/admin/common/css/common.css">
+    <link rel="stylesheet" href="/admin/common/css/modal.css">
 
 	<!-- 폰트 -->
 	<link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet">
