Feat : 로그인시 오류 메시지 출력, 매니저 등록 비밀번호,아이디 양식 추가

--- a/src/main/resources/static/admin/managers/css/managerReg.css
+++ b/src/main/resources/static/admin/managers/css/managerReg.css
@@ -1,3 +1,4 @@
+
 .dept-select {
 	width: 110px;
 }
@@ -8,4 +9,12 @@
 
 .check-comment{
 	margin-left: 10px;
+}
+
+
+.id-reference, .pw-reference {
+	margin-left: 50px;
+    margin-top: 5px; /* input 요소와 간격을 줄 수 있습니다 */
+    font-size: 12px; /* 글자 크기 조정 */
+    color: #666666; /* 글자 색상 조정 */
 }
