--- a/src/main/resources/templates/admin/managers/managers.html
+++ b/src/main/resources/templates/admin/managers/managers.html
@@ -75,7 +75,8 @@
 		<div class="select-wrap">
 			<span id="total-row" class="table-column-head-txt"></span>	
 
-			<button id="commit-button" class="default-btn" style="float: right;">등록</button>
+			<button id="commit-button" class="default-btn" style="float: right;"
+				onclick="location.href='/admin/index?path=admin/managers/managerReg'">등록</button>
 			<button id="change-button" class="default-btn" style="float: right;">변경</button>			
 			
 			<select id="searchDept" class="select">
