--- a/src/main/resources/static/admin/customer_orders/css/detail.css
+++ b/src/main/resources/static/admin/customer_orders/css/detail.css
@@ -92,6 +92,12 @@
 	border-bottom: solid 1px #D8D8D8;
 	line-height: 30px;
 }
+
+.table-column-area > div, .table-column-area > div > span, .table-data-area > div, .table-data-area > div > span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .checkbox-column, .checkbox-data { width: 3%; }
 .no-column, .no-data { width: 7%; }
 .book-title-column, .book-title-data { width: 30%; }
