--- a/src/main/resources/templates/admin/supplier_orders/supplierRegister.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierRegister.html
@@ -3,8 +3,6 @@
 
 	<link rel="stylesheet" href="/admin/common/css/common.css">
 	<link rel="stylesheet" href="/admin/supplier_orders/css/register.css">
-	<!-- Bulma CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
 	
 <div>
 	<button class="back-btn" onclick="location.href='/admin/supplier_orders/list'">
@@ -22,7 +20,7 @@
 						<span class="info-title">ISBN<i class="essential"></i></span>
 					</div>
 					<div class="supplier-input-area">
-						<span><input type="number" id="order_detail_isbn"/></span>
+						<span><input type="number" id="order_detail_isbn" class="input-size"/></span>
 					</div>
 				</div>
 				<div class="supplier-info-area">
@@ -30,7 +28,7 @@
 						<span class="info-title">책제목<i class="essential"></i></span>
 					</div>
 					<div class="supplier-input-area">
-						<span><input type="text" id="order_detail_title" /></span>
+						<span><input type="text" id="order_detail_title" class="input-size"/></span>
 					</div>
 				</div>
 				<div class="supplier-info-area">
@@ -38,7 +36,7 @@
 						<span class="info-title">출판사<i class="essential"></i></span>
 					</div>
 					<div class="supplier-input-area">
-						<span><input type="text" id="order_detail_publisher"/></span>
+						<span><input type="text" id="order_detail_publisher" class="input-size"/></span>
 					</div>
 				</div>
 				<div class="supplier-info-area">
@@ -62,7 +60,7 @@
 						<span><button class="default-btn form-btn" onclick="orderAddBtn();">추가</button></span>
 					</div>
 					<div>
-						<span><button class="default-btn cancle form-btn" onclick="resetBtn();">취소</button></span>
+						<span><button class="default-btn cancel form-btn" onclick="resetBtn();">취소</button></span>
 					</div>
 				</div>
 			</form>
@@ -73,15 +71,15 @@
 		<form id="order-register-list-form">
 			<div class="list-info-area">
 				<div>
-					<span id="list-count" class="list-count">총 5건</span>
+					<span id="list-count" class="list-count">총 0건</span>
 				</div>	
 				<div>
-					<span><button id="delete-button">삭제</button></span>
+					<span><button id="delete-button" class="form-btn" onclick="orderDeleteBtn()">삭제</button></span>
 				</div>
 			</div>
 			<div class="column-area">
 				<div class="check-column">
-					<input type="checkbox" id="select-all" class="checkbox">
+					<input type="checkbox" id="select-all" class="checkbox" onclick="checkboxHandler();">
 					<label for="select-all"></label>
 				</div>
 				<div class="no-column">
@@ -99,12 +97,18 @@
 				<div class="qty-column">
 					<span>수량</span>
 				</div>
-				<div class="purchase-column">
+				<div class="total-price-column">
 					<span>구매금액</span>
 				</div>
 			</div>
-		
 		</form>
+		<div class="total-purchase-area">
+			<span id="total-purchase-amount" class="total-purchase-amount">총 구매금액: 0원</span>
+		</div>
+		<div class="order-decision-area">
+			<span><button class="default-btn">발주확정</button></span>
+			<span><button class="default-btn cancel">취소</button></span>
+		</div>
 	</div>
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
