Feat: 상품관리페이지 수정중

--- a/src/main/resources/static/admin/products/css/products.css
+++ b/src/main/resources/static/admin/products/css/products.css
@@ -73,3 +73,7 @@
 .pagination-link.is-current, .pagination-link.is-selected {
     background-color: #4777F6;
 }
+
+.pagination-list {
+    justify-content: center;
+}
