--- a/src/main/resources/templates/admin/products/products.html
+++ b/src/main/resources/templates/admin/products/products.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="ko" xmlns="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>상품관리</title>
+
     <link rel="stylesheet" href="/admin/products/css/products.css"/>
 </head>
 <body>
@@ -101,10 +102,14 @@
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-<script src="/admin/common/js/main.js"></script>
 <!-- datatalbes -->
 <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 <script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
+<!-- flatpickr -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+<!-- js연결 -->
+<!--<script src="/admin/common/js/main.js"></script>-->
 <script src="/admin/products/js/products.js"></script>
 </body>
 </html>
