--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -160,7 +160,7 @@
           <a href="/admin/index?path=admin/reviews/reviews">리뷰조회</a>
         </li>
         <li class="sub-menu-item" data-sub-menu-id="submenu12">
-          <a href="">1:1 문의</a>
+          <a href="/admin/index?path=admin/inquiries/inquiries">1:1 문의</a>
         </li>
       </ul>
     </li>
