Feat: 상품관리페이지 수정중

--- a/src/main/resources/templates/admin/products/add-product.html
+++ b/src/main/resources/templates/admin/products/add-product.html
@@ -142,7 +142,7 @@
 </div>
 
 <div id="search-book-modal">
-    <div class="modal-content">
+    <div class="modal-content-box">
         <button id="close-btn">
             <i class="fa-solid fa-xmark"></i>
         </button>
