--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -104,9 +104,9 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     display: block;
 }
 
-#search-book-modal .modal-content {
+#search-book-modal .modal-content-box {
     position: absolute;
-    top: 25px;
+    top: 230px;
     right: 26px;
     width: 972px;
     padding: 20px 25px;
