--- a/src/main/resources/static/admin/banners/css/banners.css
+++ b/src/main/resources/static/admin/banners/css/banners.css
@@ -1,6 +1,7 @@
 table.dataTable tbody tr {
     background-color: white !important;
 }
+
 .container {
    display: flex;
    flex-direction: column;
@@ -104,17 +105,6 @@ table.dataTable tbody tr {
    color: #CCCCCC;
 }
 
-/*
-.date-option.active {
-    background-color: #4777F6;
-    color: #FFFFFF;
-    border: 1px solid #4777F6;
-    border-radius: 5px;
-}
-*/
-
-
-
 .radio-wrap {
 	display: contents;
 	height: 40px;
@@ -171,10 +161,19 @@ table.dataTable tbody tr {
 	margin-left: 10px;
 }
 
-#banners td, #banners th {
+.table thead {
+    height: 50px;
+    background-color: #FAFAFA;
+    color: #7E7E7E;
+}    
+
+.table td, .table thead th {
 	text-align: center; /* 텍스트 가운데 정렬 */
 	vertical-align: middle; /* 수직 가운데 정렬 */
-}
+    border-width: 1px 0 1px 0;
+    border-style: solid;
+    border-color: #D8D8D8;
+}    
 
 .material-symbols-outlined {
   font-variation-settings:
@@ -182,37 +181,6 @@ table.dataTable tbody tr {
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
-}
-/* 모달 스타일 추가 */
-.modal {
-	display: none; /* 초기에는 숨김 */
-	position: fixed;
-	z-index: 1000;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
-}
-
-.modal-content {
-	background-color: #fefefe;
-	margin: 15% auto; /* 상하 좌우 가운데 정렬 */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 30%;
-	border-radius: 8px;
-}
-
-.modal-footer {
-	display: flex;
-	justify-content: flex-end;
-	padding-top: 10px;
-}
-
-.modal-footer .button {
-	margin-left: 5px;
 }
 
 /* Center the DataTable pagination controls */
