--- a/src/main/resources/templates/admin/banners/bannerInsert.html
+++ b/src/main/resources/templates/admin/banners/bannerInsert.html
@@ -6,7 +6,7 @@
 <title>Banner/Popup Insert Page</title>
 
 <link rel="stylesheet" href="/admin/banners/css/banners.css" />
-
+<link rel="stylesheet" href="/admin/common/css/modal.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
@@ -16,7 +16,7 @@
 		<div class="header">
 			<h1 class="search-list-title">배너/팝업 등록</h1>
 		</div>
-		<form action="/admin/banners/insert" method="post" enctype="multipart/form-data" class="content">
+		<form action="/admin/banners/insert" method="POST" enctype="multipart/form-data" class="content">
 			<!-- 배너 정보 입력 폼 -->
 			<div class="filter-group">
 				<div class="search-list-subject insert-subject">
@@ -30,7 +30,7 @@
 					유형 <label class="required">*</label>
 				</div>
 				<div class="radio-wrap">
-					<input type="radio" name="banner_position" value="01" id="position-banner" class="radio"> <label for="position-banner">배너</label> 
+					<input type="radio" name="banner_position" value="01" id="position-banner" class="radio" checked> <label for="position-banner">배너</label> 
 					<input type="radio" name="banner_position" value="02" id="position-popup" class="radio"> <label for="position-popup">팝업</label>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 					노출 여부 <label class="required">*</label>
 				</div>
 				<div class="radio-wrap">
-					<input type="radio" name="banner_visible" value="01" id="visible" class="radio"> <label for="visible">노출</label> 
+					<input type="radio" name="banner_visible" value="01" id="visible" class="radio" checked> <label for="visible">노출</label> 
 					<input type="radio" name="banner_visible" value="02" id="hidden" class="radio"> <label for="hidden">비노출</label>
 				</div>
 			</div>
@@ -67,8 +67,9 @@
 					이미지<label class="required">*</label>
 				</div>
 				<div class="img-input-wrap">
-					<label for="input-file" class="input-file-label"> <i class="fa-solid fa-plus"></i> <img src="" alt="" id="preview" />
-					</label> <input type="file" name="banner_image" id="input-file" class="input-img-file" required/>
+					<label for="input-file" class="input-file-label"> <i class="fa-solid fa-plus"></i> 
+					<img src="" alt="" id="preview" />
+					</label> <input type="file" name="banner_image" id="input-file" class="input-img-file"/>
 				</div>
 			</div>
 			
@@ -79,20 +80,20 @@
 		</form>
 	</div>
 
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-			<p>등록하시겠습니까?</p>
-			<div class="modal-footer">
-				<button id="confirm-insert" class="modal-btn confirm">확인</button>
-				<button id="cancel-insert" class="modal-btn cancel">취소</button>
-			</div>
-		</div>
-	</div>
+	<!-- 모달 -->
+	 <div id="myModal" class="modal">
+        <div class="modal-content">
+            <p id="modal-message"></p>
+            <div class="modal-footer">
+                <button id="confirm-insert" class="modal-btn confirm">확인</button>
+            </div>
+        </div>
+    </div>
 
 	<script src="/admin/common/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="/admin/banners/js/banners.js"></script>
+	<script src="/admin/banners/js/bannerInsert.js"></script>
 
 </body>
 </html>
