Feat : 세션에 로그인 한사람 정보저장

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -11,8 +11,8 @@
 		<div class="user-profile">
 			<i class="fa-solid fa-circle-user header"></i>
 			<div class="text-wrap">
-				 <p th:text="${session.authority}"></p> <!-- 권한명 출력 -->
-                 <p th:text="${session.username}"></p>
+				 <p th:text="${session.managersDTO.manager_dept}"></p> <!-- 권한명 출력 -->
+				 <p th:text="${session.managersDTO.manager_name}"></p>
 			</div>            
 		</div>
 		<form action="/admin/logout" id="logoutForm" method="POST" style="display:none;">
